--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,220 @@
 
-BlackJack_in_C\+\+/\.vs/BlackJack_in_C\+\+/v15/\.suo
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/\.suo
 
-BlackJack_in_C\+\+/\.vs/BlackJack_in_C\+\+/v15/Browse\.VC\.db
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/Browse\.VC\.db
 
-BlackJack_in_C\+\+/\.vs/BlackJack_in_C\+\+/v15/Browse\.VC\.opendb
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/ipch/6af64a69380f547\.ipch
 
-BlackJack_in_C\+\+/\.vs/BlackJack_in_C\+\+/v15/ipch/b3fbc60be7e3519c\.ipch
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/ipch/886eb963eb328a4c\.ipch
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+\.sln
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/ipch/924874b09febb7b5\.ipch
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/BlackJack_in_C\+\+\.vcxproj
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/ipch/99b0080ad13f9000\.ipch
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/BlackJack_in_C\+\+\.vcxproj\.filters
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/ipch/c9a15cef6ba38eb9\.ipch
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/BlackJack_in_C\+\+\.vcxproj\.user
+BlackJackInCpp/BlackJackInCpp\.sln
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.log
+BlackJackInCpp/BlackJackInCpp/BlackJackInCpp\.vcxproj
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.obj
+BlackJackInCpp/BlackJackInCpp/BlackJackInCpp\.vcxproj\.filters
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.pch
+BlackJackInCpp/BlackJackInCpp/BlackJackInCpp\.vcxproj\.user
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/BlackJack_in_C\+\+\.lastbuildstate
+BlackJackInCpp/BlackJackInCpp/ClassDiagram\.cd
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/CL\.command\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.log
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/CL\.read\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.pch
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/CL\.write\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/BlackJackInCpp\.lastbuildstate
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/link\.command\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/CL\.command\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/link\.read\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/CL\.read\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.tlog/link\.write\.1\.tlog
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/CL\.write\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/stdafx\.obj
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/link\.command\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/vc141\.idb
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/link\.read\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/Debug/vc141\.pdb
+BlackJackInCpp/BlackJackInCpp/Debug/BlackJackInCpp\.tlog/link\.write\.1\.tlog
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/stdafx\.cpp
+BlackJackInCpp/BlackJackInCpp/Debug/Dack\.obj
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/stdafx\.h
+BlackJackInCpp/BlackJackInCpp/Debug/Deck\.obj
 
-BlackJack_in_C\+\+/BlackJack_in_C\+\+/targetver\.h
+BlackJackInCpp/BlackJackInCpp/Debug/Game\.obj
 
-BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.exe
+BlackJackInCpp/BlackJackInCpp/Debug/Main\.obj
 
-BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.ilk
+BlackJackInCpp/BlackJackInCpp/Debug/stdafx\.obj
 
-BlackJack_in_C\+\+/Debug/BlackJack_in_C\+\+\.pdb
+BlackJackInCpp/BlackJackInCpp/Debug/vc141\.idb
+
+BlackJackInCpp/BlackJackInCpp/Debug/vc141\.pdb
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.log
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.pch
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/BlackJackInCpp\.lastbuildstate
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/CL\.command\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/CL\.read\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/CL\.write\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/link\.command\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/link\.read\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/BlackJackInCpp\.tlog/link\.write\.1\.tlog
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/Deck\.obj
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/Game\.obj
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/Main\.obj
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/stdafx\.obj
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/vc141\.idb
+
+BlackJackInCpp/BlackJackInCpp/x64/Debug/vc141\.pdb
+
+BlackJackInCpp/Debug/BlackJackInCpp\.exe
+
+BlackJackInCpp/Debug/BlackJackInCpp\.ilk
+
+BlackJackInCpp/Debug/BlackJackInCpp\.pdb
+
+BlackJackInCpp/Debug/DeckUnitTest\.dll
+
+BlackJackInCpp/Debug/DeckUnitTest\.exp
+
+BlackJackInCpp/Debug/DeckUnitTest\.ilk
+
+BlackJackInCpp/Debug/DeckUnitTest\.lib
+
+BlackJackInCpp/Debug/DeckUnitTest\.pdb
+
+BlackJackInCpp/Debug/UnitTests\.exp
+
+BlackJackInCpp/Debug/UnitTests\.lib
+
+BlackJackInCpp/Debug/UnitTests\.pdb
+
+BlackJackInCpp/DeckUnitTest/Debug/Deck\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.log
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.pch
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/CL\.command\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/CL\.read\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/CL\.write\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/DeckUnitTest\.lastbuildstate
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/DeckUnitTest\.write\.1u\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.10732\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.10796\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.5604\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.6984\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.7144\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.8340\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.command\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.read\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/DeckUnitTest\.tlog/link\.write\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/Debug/Game\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/Main\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/stdafx\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/unittest1\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/unittestDeck\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/unittestGame\.obj
+
+BlackJackInCpp/DeckUnitTest/Debug/vc141\.idb
+
+BlackJackInCpp/DeckUnitTest/Debug/vc141\.pdb
+
+BlackJackInCpp/DeckUnitTest/DeckUnitTest\.vcxproj
+
+BlackJackInCpp/DeckUnitTest/DeckUnitTest\.vcxproj\.filters
+
+BlackJackInCpp/DeckUnitTest/DeckUnitTest\.vcxproj\.user
+
+BlackJackInCpp/DeckUnitTest/stdafx\.cpp
+
+BlackJackInCpp/DeckUnitTest/stdafx\.h
+
+BlackJackInCpp/DeckUnitTest/targetver\.h
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/Deck\.obj
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.log
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.pch
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/CL\.command\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/CL\.read\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/CL\.write\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/DeckUnitTest\.lastbuildstate
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/DeckUnitTest\.write\.1u\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/link\.command\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/link\.delete\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/link\.read\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/DeckUnitTest\.tlog/link\.write\.1\.tlog
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/stdafx\.obj
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/unittest1\.obj
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/vc141\.idb
+
+BlackJackInCpp/DeckUnitTest/x64/Debug/vc141\.pdb
+
+BlackJackInCpp/x64/Debug/BlackJackInCpp\.exe
+
+BlackJackInCpp/x64/Debug/BlackJackInCpp\.ilk
+
+BlackJackInCpp/x64/Debug/BlackJackInCpp\.pdb
+
+BlackJackInCpp/x64/Debug/DeckUnitTest\.dll
+
+BlackJackInCpp/x64/Debug/DeckUnitTest\.exp
+
+BlackJackInCpp/x64/Debug/DeckUnitTest\.ilk
+
+BlackJackInCpp/x64/Debug/DeckUnitTest\.lib
+
+BlackJackInCpp/x64/Debug/DeckUnitTest\.pdb
