BlackJack in Py
Need more unit test

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,17 @@ BlackJackInCpp/x64/Debug/DeckUnitTest\.ilk
 BlackJackInCpp/x64/Debug/DeckUnitTest\.lib
 
 BlackJackInCpp/x64/Debug/DeckUnitTest\.pdb
+
+BlackJackInPy/__pycache__/Deck\.cpython-36\.pyc
+
+BlackJackInPy/__pycache__/Game\.cpython-36\.pyc
+
+BlackJackInPy/\.idea/BlackJackInPy\.iml
+
+BlackJackInPy/\.idea/misc\.xml
+
+BlackJackInPy/\.idea/modules\.xml
+
+BlackJackInPy/\.idea/vcs\.xml
+
+BlackJackInPy/\.idea/workspace\.xml
