--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,15 @@ BlackJackInPy/\.idea/modules\.xml
 BlackJackInPy/\.idea/vcs\.xml
 
 BlackJackInPy/\.idea/workspace\.xml
+
+BlackJackInE/\.idea/misc\.xml
+
+BlackJackInE/\.idea/modules\.xml
+
+BlackJackInE/\.idea/workspace\.xml
+
+BlackJackInE/BlackJackInE\.iml
+
+BlackJackInE/out/production/BlackJackInE/main\.beam
+
+BlackJackInE/out/test/BlackJackInE/main\.beam
