--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,11 @@ BlackJackInE/BlackJackInE\.iml
 BlackJackInE/out/production/BlackJackInE/main\.beam
 
 BlackJackInE/out/test/BlackJackInE/main\.beam
+
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/Browse\.VC\.opendb
+
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db
+
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db-shm
+
+BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db-wal
