--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,7 @@ BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db
 BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db-shm
 
 BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db-wal
+
+BlackJackInE/out/production/BlackJackInE/unittests\.beam
+
+BlackJackInE/out/test/BlackJackInE/unittests\.beam
