GameOfLife in C++ Init

--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,37 @@ BlackJackInCpp/\.vs/BlackJackInCpp/v15/Solution\.VC\.db-wal
 BlackJackInE/out/production/BlackJackInE/unittests\.beam
 
 BlackJackInE/out/test/BlackJackInE/unittests\.beam
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/\.suo
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/Browse\.VC\.db
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/Browse\.VC\.opendb
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/ipch/e7776aaa3bb80a44\.ipch
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/Solution\.VC\.db
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/Solution\.VC\.db-shm
+
+GameOfLifeInCpp/\.vs/GameOfLifeInCpp/v15/Solution\.VC\.db-wal
+
+GameOfLifeInCpp/GameOfLifeInCpp\.sln
+
+GameOfLifeInCpp/GameOfLifeInCpp/GameOfLifeInCpp\.vcxproj
+
+GameOfLifeInCpp/GameOfLifeInCpp/GameOfLifeInCpp\.vcxproj\.filters
+
+GameOfLifeInCpp/GameOfLifeInCpp/GameOfLifeInCpp\.vcxproj\.user
+
+GameOfLifeInCpp/UnitTest/stdafx\.cpp
+
+GameOfLifeInCpp/UnitTest/stdafx\.h
+
+GameOfLifeInCpp/UnitTest/targetver\.h
+
+GameOfLifeInCpp/UnitTest/UnitTest\.vcxproj
+
+GameOfLifeInCpp/UnitTest/UnitTest\.vcxproj\.filters
+
+GameOfLifeInCpp/UnitTest/UnitTest\.vcxproj\.user
